Things should compile after fixing the messagestruct creation issues and the lack of a main function

--- a/src/drivers/arduino/CMakeLists.txt
+++ b/src/drivers/arduino/CMakeLists.txt
@@ -34,6 +34,8 @@ px4_add_module(
 
 	MODULE drivers__arduino
 	MAIN arduino
+	COMPILE_FLAGS
+		-Wno-sign-compare
 	SRCS
 		arduino_i2c.cpp
 	DEPENDS
