--- a/ROMFS/px4fmu_common/init.d/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/CMakeLists.txt
@@ -37,6 +37,7 @@ px4_add_romfs_files(
 	2100_standard_plane
 	2105_maja
 	2106_albatross
+        2107_kestral
 	24001_dodeca_cox
 	3000_generic_wing
 	3030_io_camflyer
